fix spacing between header and icons

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     color: #000000;
     font-family: 'Raleway', sans-serif;
     font-size: 4vw;
+    margin: 0px;
 }
 
 p {
